fix vertical align for text comparison

--- a/src/app/components/compare-text/compare-text.component.scss
+++ b/src/app/components/compare-text/compare-text.component.scss
@@ -37,6 +37,10 @@ table {
     margin: 1rem 0;
     table-layout: fixed;
 
+    tr {
+        vertical-align: top;
+    }
+
     td {
         white-space: pre-wrap;
         word-wrap: break-word;
